<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/some_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg">

    <View
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/view_main_search"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="1"
        android:background="@drawable/search_text_view"
        android:fontFamily="sans-serif-light"


        android:hint="@string/main_search"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/search_bottom"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:background="@color/menu_search"

        app:icon="@drawable/ic_baseline_search_24"
        app:iconGravity="start"
        app:iconSize="20dp"
        app:iconTint="@color/black"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_tag_catalog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_item"

            android:fontFamily="@font/noto_sans"

            android:text="@string/catalog"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:cornerRadius="4dp"
            app:icon="@drawable/tag_catalog"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:iconSize="20dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_tag_ski"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cornerRadius="4dp"

            android:backgroundTint="@color/functional_item"

            android:fontFamily="@font/noto_sans"
            android:text="@string/mount_ski_multiple"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:icon="@drawable/tag_ski"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:iconSize="20dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_tag_snowboards"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="4dp"

            android:backgroundTint="@color/functional_item"

            android:fontFamily="@font/noto_sans"
            android:text="@string/snowboard_multiple"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:icon="@drawable/tag_snowboards"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:iconSize="20dp"
            app:iconTint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_tag_clothes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cornerRadius="4dp"

            android:backgroundTint="@color/functional_item"

            android:fontFamily="@font/noto_sans"
            android:text="@string/clothes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:icon="@drawable/tag_clothes"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:iconSize="30dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_tag_helmets_masks"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cornerRadius="4dp"

            android:backgroundTint="@color/functional_item"

            android:fontFamily="@font/noto_sans"
            android:text="@string/helmets_masks"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:icon="@drawable/tag_helmets_masks"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:iconSize="20dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_tag_accessories"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_item"

            android:fontFamily="@font/noto_sans"

            android:text="@string/accessory_multiple"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="12sp"

            app:cornerRadius="4dp"
            app:icon="@drawable/tag_accessories"
            app:iconGravity="start"
            app:iconPadding="5dp"
            app:iconSize="20dp"
            app:iconTint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"

        tools:context=".MainActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sales"
            android:contentDescription="@string/main_picture" />

    </LinearLayout>

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_margin="30dp"-->
<!--        android:elevation="2dp"-->
<!--        app:menu="@menu/but_menu"-->
<!--        android:background="@drawable/round_corner"-->
<!--        app:itemRippleColor="@android:color/transparent"-->
<!--        app:itemIconSize="30dp"-->
<!--        app:labelVisibilityMode="unlabeled"-->
<!--        app:itemIconTint="@drawable/item_selector"-->
<!--        android:id="@+id/bottom_navigation"/>-->

</RelativeLayout>