<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".catalog.CatalogSki"
    android:background="@color/main_bg">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view_catalog_ski"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_text_view"
        app:iconifiedByDefault="false"
        app:queryHint="@string/catalog_search">


    </androidx.appcompat.widget.SearchView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/card_view_ski_skis"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/item_catalog_ski_skis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/mount_ski_multiple"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/snowboard_multiple"
                        android:src="@drawable/ex_skis_catalog" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/card_view_ski_boots"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/item_catalog_ski_boots"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_centerVertical="true"
                        android:text="@string/ski_boots"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/ski_boots"
                        android:src="@drawable/ski_boots_catalog" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/card_view_ski_sticks"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/item_catalog_ski_sticks"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/ski_sticks"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="155dp"
                        android:layout_height="150dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/ski_sticks"
                        android:src="@drawable/ski_sticks_catalog" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:id="@+id/card_view_ski_fixture"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackgroundBorderless"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/item_catalog_ski_fixture"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/ski_fixture"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/ski_fixture"
                        android:src="@drawable/ski_fixture_catalog" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/search_text_view"
        app:itemIconTint="@drawable/menu_item_selector"
        app:itemTextColor="@drawable/menu_item_selector"
        app:menu="@menu/bottom_navigation" >
    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>